# ready_set_boole

./: Cargo.toml
src/: arithmetic.rs  curve.rs  evaluate.rs  expression.rs  lib.rs  main.rs  set.rs
